# ai-tells-time

./: .env.example  .gitignore  CLEAN-INSTALL.md  CONTRIBUTING.md  DEPLOY-MAINTENANCE.md  ENVIRONMENT.md  README.md  SETUP.md  STATUS.md  deploy.sh  main.py  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml  test.yml
hooks/: pre-commit  pre-push
obs-assets/: SETUP_GUIDE.md
scripts/: setup-local-llm.sh
src/: capture.py  cleanup.py  database.py
src/inference/: __init__.py
tests/: __init__.py  conftest.py  test_capture.py  test_database.py  test_inference.py  test_main.py  test_main_async.py
