[project]
name = "ai-tells-time"
version = "0.1.0"
description = "Live stream where AI vision models tell time from analog clock images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "obs-websocket-python>=2.0.0",
]

[project.scripts]
ai-tells-time-capture = "src.capture:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
