[project]
name = "ai-tells-time"
version = "0.1.0"
description = "Live stream where AI vision models tell time from analog clock images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "obsws-python>=1.8.0",
]

[project.scripts]
ai-tells-time-capture = "src.capture:main"

[tool.hatch.build]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
