[project]
name = "ai-tells-time"
version = "0.1.0"
description = "Live stream where AI vision models tell time from analog clock images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "google-genai>=2.9.0",
    "obsws-python>=1.8.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.0.0",
]

[project.scripts]
capture = "src.capture:main"
cleanup = "src.cleanup:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
